--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
         <p class="blink">A New Kind of Happy Hour</p>
         <div class="planet-system">
             <a href="about.html" class="logo-space">
-                <img src="themoon.png" alt="Mellow Logo" class="logo-image">
+                <img src="therealmoon.png" alt="Mellow Logo" class="logo-image">
             </a>
             <a href="contact.html" class="nav-button" id="contact">
                 <span class="nav-icon">📞</span>Contact
